--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ dependencies:
 - base >= 4.7 && < 5
 - bytestring
 - array
+- text
+- text-show
 - pretty-simple
 
 library:
@@ -55,3 +57,4 @@ build-tools:
 
 default-extensions:
   - OverloadedStrings
+  - NamedFieldPuns
