--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -23,13 +23,15 @@ source-repository head
 
 library
   exposed-modules:
-      Ast
-      Lexer.Defs
-      Lexer.Engine
-      Lexer.Internal
-      Lexer.Tokens
-      Parser
-      ParserInternals
+      Parsing.Defs
+      Parsing.Filter.Lexer
+      Parsing.Filter.Parser
+      Parsing.Filter.Tokens
+      Parsing.Internal.Lexing.AlexIntegration
+      Parsing.Internal.Lexing.Utils
+      Parsing.Internal.Parsing
+      Parsing.Json.Lexer
+      Parsing.Json.Parser
   other-modules:
       Paths_jq_hs
   hs-source-dirs:
