--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -46,7 +46,9 @@ library
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , pretty-simple
+    , scientific
     , text
     , text-show
   default-language: Haskell2010
@@ -68,8 +70,10 @@ executable jqhs-exe
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , jq-hs
     , pretty-simple
+    , scientific
     , text
     , text-show
   default-language: Haskell2010
@@ -92,8 +96,10 @@ test-suite jqhs-test
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , jq-hs
     , pretty-simple
+    , scientific
     , text
     , text-show
   default-language: Haskell2010
