--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -53,6 +53,7 @@ library
     , scientific
     , text
     , text-show
+    , unordered-containers
   default-language: Haskell2010
 
 executable jqhs-exe
@@ -78,6 +79,7 @@ executable jqhs-exe
     , scientific
     , text
     , text-show
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite jqhs-test
@@ -104,4 +106,5 @@ test-suite jqhs-test
     , scientific
     , text
     , text-show
+    , unordered-containers
   default-language: Haskell2010
