--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -24,6 +24,7 @@ source-repository head
 library
   exposed-modules:
       Json
+      Json.Encode
       Parsing.Defs
       Parsing.Filter.Lexer
       Parsing.Filter.Parser
