Update stack resolver

--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -43,11 +43,11 @@ library
       OverloadedStrings
       NamedFieldPuns
   build-tools:
-      alex >=3.2.7
-    , happy >=1.20
+      alex
+    , happy
   build-depends:
       array
-    , base >=4.7 && <5
+    , base
     , bytestring
     , containers
     , pretty-simple
@@ -68,11 +68,11 @@ executable jqhs-exe
       NamedFieldPuns
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-tools:
-      alex >=3.2.7
-    , happy >=1.20
+      alex
+    , happy
   build-depends:
       array
-    , base >=4.7 && <5
+    , base
     , bytestring
     , containers
     , jq-hs
@@ -95,11 +95,11 @@ test-suite jqhs-test
       NamedFieldPuns
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-tools:
-      alex >=3.2.7
-    , happy >=1.20
+      alex
+    , happy
   build-depends:
       array
-    , base >=4.7 && <5
+    , base
     , bytestring
     , containers
     , jq-hs
