--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -59,7 +59,7 @@ library
     , unordered-containers
   default-language: Haskell2010
 
-executable jqhs-exe
+executable jqhs
   main-is: Main.hs
   other-modules:
       Options
