--- a/package.yaml
+++ b/package.yaml
@@ -34,7 +34,7 @@ library:
   source-dirs: src
 
 executables:
-  jqhs-exe:
+  jqhs:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
