--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -44,6 +44,7 @@ library
       OverloadedStrings
       NamedFieldPuns
       RecordWildCards
+      ApplicativeDo
   build-tools:
       alex
     , happy
@@ -71,6 +72,7 @@ executable jqhs
       OverloadedStrings
       NamedFieldPuns
       RecordWildCards
+      ApplicativeDo
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-tools:
       alex
@@ -100,6 +102,7 @@ test-suite jqhs-test
       OverloadedStrings
       NamedFieldPuns
       RecordWildCards
+      ApplicativeDo
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-tools:
       alex
