--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -46,6 +46,8 @@ library
       NamedFieldPuns
       RecordWildCards
       ApplicativeDo
+      BangPatterns
+      StrictData
   build-tools:
       alex
     , happy
@@ -74,6 +76,8 @@ executable jqhs
       NamedFieldPuns
       RecordWildCards
       ApplicativeDo
+      BangPatterns
+      StrictData
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-tools:
       alex
@@ -104,6 +108,8 @@ test-suite jqhs-test
       NamedFieldPuns
       RecordWildCards
       ApplicativeDo
+      BangPatterns
+      StrictData
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-tools:
       alex
