Move satellite functions to internal module

--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -24,6 +24,7 @@ source-repository head
 library
   exposed-modules:
       Data.Filter
+      Data.Filter.Internal
       Data.Json
       Data.Json.Encode
       Lib
