Filter: Refactor structure and add builtins

--- a/jq-hs.cabal
+++ b/jq-hs.cabal
@@ -24,7 +24,10 @@ source-repository head
 library
   exposed-modules:
       Data.Filter
-      Data.Filter.Internal
+      Data.Filter.Builtins
+      Data.Filter.Internal.Result
+      Data.Filter.Internal.Run
+      Data.Filter.Run
       Data.Json
       Data.Json.Encode
       Lib
